# acli

./: .gitignore  README.md  acli.py  http_logging.py  login.py  parser.py  pyproject.toml
acli/: cli.py  config.py  keyring.py  login.py  parser.py  session.py  utils.py
src/acli/: __main__.py  cli.py  keyring.py  login.py  parser.py  session.py
